<resources>

    <string name="app_name">When and Where</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_activity">Activity</string>
    <string name="text_me">Me</string>
    <string name="text_member">Member</string>
    <string name="text_map">Map</string>
    <string name="text_time">Time</string>

    <string name="calendar">calendar</string>
    <string name="activity">activity</string>
    <string name="me">me</string>
    <string name="activity_name">Name</string>
    <string name="time">time</string>
    <string name="to">to</string>
    <string name="activity_session">activity session</string>
    <string name="discussion_session">discussion session</string>
    <string name="my_activity">my activity</string>
    <string name="name">Dinner</string>
    <string name="start_date">2019-04-01</string>
    <string name="end_date">2019-04-03</string>
    <string name="activity_session_input">60min</string>
    <string name="discuss_session_input">20min</string>
    <string name="CONFIRM">Button</string>
    <string name="text_title">text_title</string>
    <string name="text_hello">text_hello</string>
    <string name="text_accounts">text_accounts</string>
    <string name="m_name">m_name</string>
    <string name="placepic">placepic</string>
    <string name="Time">Time</string>
    <string name="place">Place</string>
    <string name="todo">todo</string>
    <string name="input_name">Input_name</string>
    <string name="abc123_gmail_com">abc123@gmail.com</string>
    <string name="notice_name">notice_name</string>
    <string name="invite">invite</string>

    <string name="all_accounts">Members</string>
    <string name="title_member_list">Member List</string>
    <string name="hi">hi</string>
    <string name="act_list_get_name">act_list_get_name</string>
<<<<<<< HEAD
    <string name="act_list_name">act_list_name</string>

    <string name="text_recommend_time_period">Recommend Time Period</string>
    <string name="text_date">date</string>
=======
    <string name="act_list_name">Name</string>
    <string name="text_date">start date</string>
    <string name="enddate">end date</string>
>>>>>>> BranchYYT
    <string name="email">Email:</string>
    <string name="c_events">c_events</string>
    <string name="title_Markers">Markers</string>
    <string name="marker_title_taroko">太魯閣國家公園</string>
    <string name="marker_title_yushan">玉山國家公園</string>
    <string name="marker_title_kenting">墾丁國家公園</string>
    <string name="marker_title_yangmingshan">陽明山國家公園</string>
    <string name="address_name">Hong Kong</string>
    <string name="Search_Button">Search</string>
    <string name="Back">Back</string>
</resources>
